# huffman

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test-hafe.sh
include/: BitStream.hpp  Histogram.hpp  HuffmanCode.hpp  HuffmanNode.hpp  HuffmanTree.hpp  InverseSymbolTable.hpp  ShannonHistogram.hpp  SymbolTable.hpp  common.hpp  encode_decode.hpp  huffman.hpp
include/bitarray/: BitArray.hpp  BitArray8.hpp  common.hpp
include/decoder/: Decoder.hpp
include/encoder/: Encoder.hpp
include/endian/: endianess.hpp
include/hafe_file_format/: Hafe.hpp  HafeBody.hpp  HafeHeader.hpp  HafeSymbolTable.hpp
include/math/: math.hpp
tests/: CMakeLists.txt  bitarray_test.hpp  encoder_decoder_test.hpp  hafe_test.hpp  huffman_code_test.hpp  huffman_test.cpp  old_hafe_test.hpp
